--- a/Vehicles/Vehicles.API/appsettings.json
+++ b/Vehicles/Vehicles.API/appsettings.json
@@ -17,6 +17,6 @@
     "From": "pestebanpruebas@gmail.com",
     "Smtp": "smtp.gmail.com",
     "Port": 587,
-    "Password": "70200890@."
+    "Password": "70200890@"
   }
 }
