Add reset password

--- a/Vehicles/Vehicles.API/Vehicles.API.csproj
+++ b/Vehicles/Vehicles.API/Vehicles.API.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Vehicles.commons\Vehicles.commons.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\API\" />
+  </ItemGroup>
+
 </Project>
